--- a/极客时间-微服务实战160讲/容错与限流-hystrix/6.信号量和线程池隔离.md
+++ b/极客时间-微服务实战160讲/容错与限流-hystrix/6.信号量和线程池隔离.md
@@ -84,3 +84,19 @@ You can configure both of these uses of semaphores by means of dynamic propertie
 **Note**: if a dependency is isolated with a semaphore and then becomes latent, the parent threads will remain blocked until the underlying network calls timeout.
 
 Semaphore rejection will start once the limit is hit but the threads filling the semaphore can not walk away.
+
+
+## 线程 VS 信号量
+
+- 信号量
+  - 轻量，没有额外开销
+  - 不支持任务排队和主动超时
+  - 适用受信客户
+  - 适用高扇出（网关）
+  - 适用高频高速调用（Cache）
+- 线程
+  - 支持排队和超时
+  - 支持异步调用
+  - 线程调用会产生额外性能开销
+  - 适用于不受信用户请求
+  - 适用于有限扇出
