--- a/极客时间-微服务实战160讲/注册发现-Eureka/4.Ribbon架构原理.md
+++ b/极客时间-微服务实战160讲/注册发现-Eureka/4.Ribbon架构原理.md
@@ -2,6 +2,24 @@
 
 [**深入理解Ribbon之源码解析**](https://blog.csdn.net/forezp/article/details/74820899)
 
+**Ribbon plays a critical role in supporting inter-process communication in the cloud. The library includes the Netflix client side load balancers and clients for middle tier services.**
+
+**Ribbon provides the following features:**
+
+1. Multiple and pluggable load balancing rules
+2. Integration with service discovery
+3. Built-in failure resiliency
+4. Cloud enabled
+5. Clients integrated with load balancers
+6. Archaius configuration driven client factory
+
+
+**There are three sub projects:**
+
+1. ribbon-core: includes load balancer and client interface definitions, common load balancer implementations, integration of client with load balancers and client factory.
+2. ribbon-eureka: includes load balancer implementations based on Eureka client, which is the library for service registration and discovery.
+3. ribbon-httpclient: includes the JSR-311 based implementation of REST client integrated with load balancers.
+
 ## Ribbon主要组件
 
 1. Rule负载均衡：各种客户端负载均衡策略
