--- a/极客时间-微服务实战160讲/监控模块-Prometheus/3.Prometheus简介.md
+++ b/极客时间-微服务实战160讲/监控模块-Prometheus/3.Prometheus简介.md
@@ -60,7 +60,7 @@ The features that distinguish Prometheus from other metrics and monitoring syste
 
 ## Prometheus存储设计
 
-[****](https://prometheus.io/docs/prometheus/latest/storage/)
+[**Github**](https://prometheus.io/docs/prometheus/latest/storage/)
 
 
 Prometheus包括一个本地磁盘时间序列数据库，但也可以选择与远程存储系统集成。
@@ -93,6 +93,114 @@ A Prometheus server's data directory looks something like this:
     └── checkpoint.00000001
         └── 00000000
 ```
+
+
+## Metrics种类
+
+1. Counter(计数器) ： 始终增加，http请求数，下单数
+2. Gauge（测量仪）： 当前值的一次快照测量，可增加可减少。比如磁盘使用率，当前用户在线数量
+3. Histogram(直方图)： 通过分桶Bucket方式统计样本分布
+4. Summary(汇总): 根据样本统计处百分位。客户端计算
+
+
+
+
+
+## Target
+
+我们知道prometheus抓取数据的方式是pull模式。
+
+数据抓取的目标是Target，target可以是一个操作系统，也可以是一个服务。通过/metrics端点来拉取数据。
+
+默认15s的间隔抓取一次数据。
+
+![](https://oscimg.oschina.net/oscnet/up-c2a707fd60379cb52e341ad77b3967452b1.png)
+
+metrics到底是什么样子的呢？
+
+![](https://oscimg.oschina.net/oscnet/up-1713ce9632bf55b39d03d7b1a0244c9c8d6.png)
+
+每个metrics都有一个名字，http_requests_total这就是一个名字。
+
+{code=200 path='/status'} 叫做label。
+
+最后绿色标注的就是metrics的值。
+
+那么时间如何体现呢？在Prometheus抓取数据之后，存在时间序列数据库的时候，才产生时间戳。
+
+并不是Metrics在客户端产生的时间。
+
+
+## Scrape metric
+
+![](https://oscimg.oschina.net/oscnet/up-724a40dbb48d91f4690ff016694e2f198e7.png)
+
+直接采集：一般都是埋点方式，采用prometheus的客户端直接埋点。
+
+间接采集：通过Exporter采集数据然后暴露metrics给到prometheus服务端
+
+下面是Exporter的示例图：
+
+![](https://oscimg.oschina.net/oscnet/up-3d87c9c953da78c912278f033fa154aa8e2.png)
+
+[到底有哪些Exporter呢：](https://prometheus.io/docs/instrumenting/exporters/)
+
+- OS Node Exporter
+    - linux
+    - windows
+- Database
+    - mysql
+    - postgresql
+    - couchDB
+- Message Queue
+    - kafka
+    - rabbitMQ
+    - NATS
+- Logging
+    - elasticsearch
+    - fluentd
+    - telegraf
+- Key-Value
+    - redis
+    - memcached
+- WebService
+    - Apache
+    - Nginx
+- Proxy
+    - Haproxy
+    - Varnish
+- DNS
+    - BIND
+    - PowerDNS
+    - Unbound
+- BlackBox
+
+
+常用的有如上这些，更多可以参见官网。
+
+
+
+## PromQL
+
+PromQL是Prometheus提供的一种查询语言。通过PromQL可以对时序数据进行计算和UI展示。
+
+![](https://oscimg.oschina.net/oscnet/up-9d4184699473c186f4b960674ac2a8164f5.png)
+
+
+## Alert Definition
+
+告警的定义在prometheus。
+
+四小时内磁盘是否满：
+
+![](https://oscimg.oschina.net/oscnet/up-29d61efa08bd6315e6ad9510cb50cfda025.png)
+
+
+Alert Manager还有一些高级的功能，比如分组，去重，路由等
+
+
+![](https://oscimg.oschina.net/oscnet/up-89da0237214e2b5d14a6788d8c9db076ed3.png)
+
 
 
 
